fixed alignment in product-advisor section and customized

--- a/dev/scss/_customized.scss
+++ b/dev/scss/_customized.scss
@@ -260,7 +260,7 @@
         .customized {
 
             figcaption {
-                float:bottom;
+                justify-content: center;
                 font-weight: 700;
                 text-transform: uppercase;
                 font-size: 1.2rem;
