--- a/dev/scss/_product-advisor.scss
+++ b/dev/scss/_product-advisor.scss
@@ -18,12 +18,12 @@
     p {
         text-align: center;
         color: white;
-        margin-bottom: 1.5rem;
+        margin-bottom: 1.8rem;
     }
 
     hr {
         max-width: 95vw;
-        margin-bottom: 1rem;
+        margin-bottom: 1.4rem;
     }
 
     .form-flex {
@@ -40,26 +40,25 @@
     select {
         min-width: 300px;
         min-height: 40px;
+        font-weight: 700;
         background-color: lightgrey;
+        color: rgb(104, 104, 104);
         margin-bottom: 1.5rem;
         background-image: url(/images/arrow-point-down.png);
 
         background-repeat: no-repeat;
-        background-position-x: 99.6%;
+        background-position-x: 97%;
         background-position-y: 12px;
-
-    }
-
-    select {
+        padding-left: 1rem;
+        
         -webkit-appearance: none;
         -moz-appearance: none;
         text-indent: 1px;
         text-overflow: '';
-    }
 
-    // .rotate {
-    //     transform: rotate(180deg);
-    // }
+
+
+    }
 
 
     
@@ -71,6 +70,7 @@
         min-width: 300px;
         min-height: 40px;
         color: white;
+        font-weight: 700;
         background-color: rgba(0,157,220,255);
         border: none;
         margin-top: 1rem;
@@ -88,19 +88,18 @@
             // margin-bottom: 1.5rem;
             background-image: url(/images/down-arrow-blue.png);
             background-repeat: no-repeat;
-            background-position-x: 99.6%;
+            background-position-x: 97%;
             background-position-y: 12px;
+            font-size: 0.9;
+            font-weight: 700;
 
-           
-        }
-
-        select {
             -webkit-appearance: none;
             -moz-appearance: none;
             text-indent: 1px;
             text-overflow: '';
         }
-    
+
+      
 
         hr {
             min-width: 100%;
@@ -115,6 +114,7 @@
             input {
                 grid-column: 1 / span 3;
                 grid-row: 4/5;
+                font-weight: 500;
                 max-height: 50px;
                 font-size: 1.1rem;
             }
@@ -188,10 +188,15 @@
 
         }
 
+        h2 {
+
+            font-size: 1.8rem;
+        }
 
         p {
             color: rgb(55, 165, 224);
             font-weight: 400;
+            font-size: 1.5rem;
         }
     }
 
@@ -199,15 +204,16 @@
 
 
 @media (min-width: 105.625em) {
-
+    
     .product-advisor {
         padding: 0 2rem;
         // width: 100%;
 
         select {
-            min-width: 310px;
-            max-width: 310px;
+            // min-width: 360px;
+            // max-width: 360px;
             width: 100%;
+            max-width: -webkit-fill-available;
         }
 
         hr {
@@ -216,7 +222,8 @@
 
         .form-flex {
             display: grid;
-            justify-items: center;
+            justify-items: start;
+            justify-content: center;
             grid-template-columns: repeat(5, 1fr);
             grid-template-rows: 1fr 1fr;
             position: relative;
@@ -238,7 +245,7 @@
             .select-2 {
                 grid-column: 2/3;
                 grid-row: 1/2;
-                margin: 1.5rem 0.5rem 2rem 0.5rem;
+                margin: 1.5rem 0.3rem 2rem 0rem;
             }
 
             .label-2 {
@@ -250,7 +257,7 @@
             .select-3 {
                 grid-column: 3/4;
                 grid-row: 1/2;
-                margin: 1.5rem 0.5rem 2rem 0.5rem;
+                margin: 1.5rem 0.2rem 2rem 0.3rem;
                 
             }
 
@@ -262,7 +269,7 @@
             .select-4 {
                 grid-column: 4/5;
                 grid-row: 1/2;
-                margin: 1.5rem 0.5rem 2rem 0.5rem;
+                margin: 1.5rem 0rem 2rem 0.4rem;
             }
 
             .label-4 {
@@ -273,7 +280,7 @@
             .select-5 {
                 grid-column: 5/6;
                 grid-row: 1/2;
-                margin: 1.5rem 0.5rem 2rem 0.5rem;
+                margin: 1.5rem 0rem 2rem 0.5rem;
             }
 
             .label-5 {
@@ -287,7 +294,6 @@
                 margin-bottom: 1rem;
                 margin-top: 0;
                 width: 100%;
-                // min-width: 97.7%;
                 position: absolute;
             }
         }
